packages/parser/test/parser/E0131-const.txt
const : int
===== err =====
anonymous:1:6: ParseError: E0131 - Expected variable declaration name after `const` keyword
1 | const : int
  |      ^
